--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Helldivers Mission Tracker</p>
+        <p>NOT affilated with Arrowhead nor Sony.</p>
     </footer>
     <script src="script.js"></script>
 </body>
